Support animated textures as fonts